--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+    <link rel="icon" href="Documents/bootstrap-4.1.3/site/favicon.ico">
 
-    <title>Pricing example for Bootstrap</title>
+    <title>当たるんです</title>
 
     <!-- Bootstrap core CSS -->
     <link href="Documents/bootstrap-4.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -21,12 +21,25 @@
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
       <h5 class="my-0 mr-md-auto font-weight-normal">Company name</h5>
       <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="#">Features</a>
-        <a class="p-2 text-dark" href="#">Enterprise</a>
-        <a class="p-2 text-dark" href="#">Support</a>
-        <a class="p-2 text-dark" href="#">Pricing</a>
+        <a class="p-2 text-dark" href="#">当たるんですとは？</a>
+        <a class="p-2 text-dark" href="#">レーススケジュール</a>
+        <a class="p-2 text-dark" href="#">レース結果</a>
+        <a class="p-2 text-dark" href="#">よくある質問</a>
+        <a class="p-2 text-dark" href="#">当選者の声</a>
       </nav>
-      <a class="btn btn-outline-primary" href="#">Sign up</a>
+      <a class="btn btn-outline-primary" href="#">新規登録</a>
+      <a class="btn btn-outline-primary" href="#">ログイン</a>
+    </div>
+
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+      <h5 class="my-0 mr-md-auto font-weight-normal">Company name</h5>
+      <nav class="my-2 my-md-0 mr-md-3">
+        <a class="p-2 text-dark" href="#">当たるんですとは？</a>
+        <a class="p-2 text-dark" href="#">公営くじだから安心・安全</a>
+        <a class="p-2 text-dark" href="#">どんな仕組み</a>
+        <a class="p-2 text-dark" href="#">どうやって買うの？</a>
+        <a class="p-2 text-dark" href="#">当たったらどうするの？</a>
+      </nav>
     </div>
 
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
@@ -86,7 +99,7 @@
       <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
           <div class="col-12 col-md">
-            <img class="mb-2" src="Documents/bootstrap-4.1.3/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
+            <img class="mb-2" src="Documents/bootstrap-4.1.3/site/docs/4.1/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
             <small class="d-block mb-3 text-muted">&copy; 2017-2018</small>
           </div>
           <div class="col-6 col-md">
@@ -127,10 +140,10 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="Documents/bootstrap-4.1.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="Documents/bootstrap-4.1.3/assets/js/vendor/popper.min.js"></script>
+    <script>window.jQuery || document.write('<script src="Documents/bootstrap-4.1.3/site/docs/4.1/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="Documents/bootstrap-4.1.3/site/docs/4.1/assets/js/vendor/popper.min.js"></script>
     <script src="Documents/bootstrap-4.1.3/dist/js/bootstrap.min.js"></script>
-    <script src="Documents/bootstrap-4.1.3/assets/js/vendor/holder.min.js"></script>
+    <script src="Documents/bootstrap-4.1.3/site/docs/4.1/assets/js/vendor/holder.min.js"></script>
     <script>
       Holder.addTheme('thumb', {
         bg: '#55595c',
